...
            android:layout_height="400dp"
            android:layout_alignParentStart="true"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:splitMotionEvents="true"
            android:textDirection="anyRtl"
            android:layout_alignTop="@+id/listview"
            android:layout_alignBottom="@+id/listview" />

        <EditText
            android:id="@+id/exerciseSearch"
            android:background="@drawable/exercise_search"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@+id/include2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
...
