<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.strokere.Home">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <include
            android:id="@+id/include2"
            layout="@layout/navbar" />

        <Button
            android:id="@+id/ShuttleRunBtn"
            style="@style/standard_button"
            android:background="@drawable/standard_button_green"
            android:onClick="customWorkout"
            android:text="Custom"
            android:layout_above="@+id/StepUpsBtn"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/StepUpsBtn"
            style="@style/standard_button"
            android:background="@drawable/standard_button_green"
            android:onClick="oTestMenu"
            android:text="SELF TESTS"
            app:layout_constraintTop_toBottomOf="@+id/ShuttleRunBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/StandardBtn"
            style="@style/standard_button"
            android:background="@drawable/standard_button_pink"
            android:onClick="standardWorkout"
            android:text="Standard"
            android:layout_above="@+id/ShuttleRunBtn"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
