<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.strokere.ExerciseView">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">


        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbarP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenAccent"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/exerciseNameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="30sp" />
        </android.support.v7.widget.Toolbar>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg">

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/relativeLayout"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/relativeLayout"
                android:layout_marginTop="32dp" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp">

                <VideoView
                    android:id="@+id/videoViewE"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:keepScreenOn="true" />

                <ImageButton
                    android:id="@+id/pauseResume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:alpha="0"
                    android:backgroundTint="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_pause_circle_outline_white_48dp"
                    tools:background="@android:color/transparent" />

            </RelativeLayout>

            <ImageButton
                android:id="@+id/thumbsDownbtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignEnd="@+id/relativeLayout"
                android:layout_alignTop="@+id/thumbsUpBtn"
                android:adjustViewBounds="false"
                android:alpha="0.5"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:hapticFeedbackEnabled="false"
                android:longClickable="false"
                android:onClick="disslikeExercise"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ic_thumb_down_black_48dp" />

            <ImageButton
                android:id="@+id/thumbsUpBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/relativeLayout"
                android:layout_marginBottom="50dp"
                android:adjustViewBounds="false"
                android:alpha="0.5"
                android:background="@android:color/transparent"
                android:longClickable="false"
                android:onClick="likeExercise"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ic_thumb_up_black_48dp" />

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="200sp" />

        </RelativeLayout>


        <!-- Layout for content is here. This can be a RelativeLayout  -->

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

